# fedi-archive-search

./: .gitignore  README.md  fedi_archive_search.py  pyproject.toml
fedi_archive_search/: fedi_archive_search.py
