[tool.poetry]
name = "fedi-archive-search"
version = "0.1.0"
description = ""
authors = ["Chris Patti <feoh@feoh.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.0.0"
streamlit = "^1.35.0"

[tool.poetry.scripts]
fedi-archive-search = "fedi_archive_search:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
